--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "ajv": "^5.5.2",
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-material-bottom-navigation": "^1.0.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2",
     "react-navigation-redux-helpers": "^2.0.5",
     "react-redux": "^5.0.7",
@@ -23,7 +26,7 @@
     "babel-eslint": "^8.2.6",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
-    "eslint": "^5.4.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
