--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start-android": "node node_modules/react-native/local-cli/cli.js run-android",
     "test": "jest"
   },
   "dependencies": {
@@ -11,6 +12,9 @@
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-keyboard": "^2.0.1",
+    "react-native-material-textfield": "^0.12.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2",
     "react-navigation-redux-helpers": "^2.0.5",
     "react-redux": "^5.0.7",
